// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input render text input 1`] = `
<input
  className="input"
  type="text"
/>
`;

exports[`Input render text input highlight 1`] = `
<input
  className="input input--highlight"
  type="text"
/>
`;
